--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -10,14 +10,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
-  <script src ="assets/script/featherlight.js"></script>
   <script src ="assets/script/main.js"></script>
 
   <link href='http://fonts.googleapis.com/css?family=Lusitana:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,300,300italic,400italic,700italic,700,800,800italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="assets/style/css/featherlight.css">
   <link rel="stylesheet" href="assets/style/css/main.css">
+
+  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+  <script type="text/javascript" src="assets/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+
+  <link rel="stylesheet" href="assets/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+  <script type="text/javascript" src="assets/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+
+  <link rel="stylesheet" href="assets/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+  <script type="text/javascript" src="assets/fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+  <script type="text/javascript" src="assets/fancybox/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+
+  <link rel="stylesheet" href="assets/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+  <script type="text/javascript" src="assets/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 </head>
 
 <body id="secondary">
@@ -58,99 +70,99 @@
     <p>If career counselors can spend more time connecting job seekers to services that will lead them to careers, there will be better participation in the workforce system. We are still developing Work Forward NOLA, you can check it out now by visiting <a href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a>.</p>
     <h3>Photos</h3>
     <div class="flex-boxes">
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/workforce-triangle.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/workforce-triangle.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/workforce-triangle.jpg" alt="Whiteboard drawing of workforce triangle"></div>
         <small>Workforce triangle</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/workforce.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/workforce.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/workforce.jpg" alt="Simplified workforce triangle showing the relationship between Federal, State and local"></div>
         <small>Simplified workforce triangle</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/design-session.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/design-session.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/design-session.jpg" alt="Several people sitting around a table for a design session"></div>
         <small>Photo from design session</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/journey-map3.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map3.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map3.jpg" alt="Journey map written on a whiteboard describing how long it would take for a job seeker to become employed"></div>
         <small>Job seeker journey map</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/journey-map-2.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map-2.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map-2.jpg" alt="White boarding drawing of a journey map"></div>
         <small>Job seeker journey map</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/journey-map.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map.jpg" alt="Journey map written on post-it notes"></div>
         <small>Job seeker journey map</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/when-they.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/when-they.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/when-they.jpg" alt="Whiteboard planning that uses statements, when [blank], they [blank] to describe user behavior"></div>
         <small>When...They...exercise</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/original-one-pager.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/original-one-pager.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/original-one-pager.jpg" alt="Bulletin board with original one-pager"></div>
         <small>Original one-pager on bulletin board</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/one-pager-sketches.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/one-pager-sketches.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/one-pager-sketches.jpg" alt="Drafts of the one-pager printed and hung on a white board"></div>
         <small>Different one-pager versions</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/one-pager.gif">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/one-pager.gif">
         <div class="flex-image"><img src="assets/images/work-forward-nola/one-pager.gif" alt="Gif of the different draft versions of the one-pager"></div>
         <small>Different one-pager versions</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/One-Pager.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/One-Pager.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/One-Pager.jpg" alt="Final version of the one-pager"></div>
         <small>Final re-designed one pager</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/re-designed-one-pager.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/re-designed-one-pager.jpg" alt="Bulletin board with re-designed one-pager"></div>
         <small>Re-designed one pager</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/JobSeekerJourneyMap.png">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/JobSeekerJourneyMap.png">
         <div class="flex-image"><img src="assets/images/work-forward-nola/JobSeekerJourneyMap.png" alt="Map showing the journey of different people within the workforce system"></div>
         <small>Workforce journey map</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/WorkforceSystemUserJourney.png">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/WorkforceSystemUserJourney.png">
         <div class="flex-image"><img src="assets/images/work-forward-nola/WorkforceSystemUserJourney.png" alt="Map showing the journey of different people within the workforce system in New Orleans"></div>
         <small>Workforce journey map - New Orleans</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="">
+      <a class="flex-box fancybox" rel="group" href="">
         <div class="flex-image"><img src="assets/images/work-forward-nola/appt.gif" alt="A wireframe of a user interface where a job seeker could schedule an appointment for a visit"></div>
         <small>Scheduling an appointment wireframe created in balsalmiq</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/Georgia-career-exploration.png">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/Georgia-career-exploration.png">
         <div class="flex-image"><img src="assets/images/work-forward-nola/Georgia-career-exploration.png" alt="Wireframe of a career exploration interface"></div>
         <small>Career exploration wireframe created in balsalmiq</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/Pascal-career-exploration.png">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/Pascal-career-exploration.png">
         <div class="flex-image"><img src="assets/images/work-forward-nola/Pascal-career-exploration.png" alt="Wireframe of career assessment interface"></div>
         <small>Career assessment wireframe created in balsalmiq</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/steph-career-exploration.png">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/steph-career-exploration.png">
         <div class="flex-image"><img src="assets/images/work-forward-nola/steph-career-exploration.png" alt="Wireframe of job exploration"></div>
         <small>Career exploration wireframe created in balsalmiq</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/career-exploration.gif">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/career-exploration.gif">
         <div class="flex-image"><img src="assets/images/work-forward-nola/career-exploration.gif" alt="Version of interface where a job seeker could take a career assessment"></div>
         <small>Career assessment wireframe</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/portfolio-sketches2.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/portfolio-sketches2.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/portfolio-sketches2.jpg" alt="Sketching of the home page"></div>
         <small>Sketching interface</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/wfnv.2.gif">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/wfnv.2.gif">
         <div class="flex-image"><img src="assets/images/work-forward-nola/wfnv.2.gif" alt="Gif of the second version"></div>
         <small>Version 2 mock-up</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/usability-test.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/usability-test.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/usability-test.jpg" alt="Stephanie conducting a usability test on a phone"></div>
         <small>Usability test</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/portfolio-sketches.jpg">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/portfolio-sketches.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/portfolio-sketches.jpg" alt="Sketching versions of career pathways"></div>
         <small>Sketching career pathways</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/work-forward-nola/wfn.gif">
+      <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/wfn.gif">
         <div class="flex-image"><img src="assets/images/work-forward-nola/wfn.gif" alt="Gif of final version"></div>
         <small>Final version</small>
       </a>
@@ -255,7 +267,7 @@
       </ul>
     </div>
   </footer>
-  <script>
+  <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -264,6 +276,9 @@
     ga('create', 'UA-85010120-1', 'auto');
     ga('send', 'pageview');
 
+  	$(document).ready(function() {
+  		$(".fancybox").fancybox();
+  	});
   </script>
 </body>
 </html>
