--- a/posting-pro.html
+++ b/posting-pro.html
@@ -10,14 +10,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
-  <script src ="assets/script/featherlight.js"></script>
   <script src ="assets/script/main.js"></script>
 
   <link href='http://fonts.googleapis.com/css?family=Lusitana:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,300,300italic,400italic,700italic,700,800,800italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="assets/style/css/featherlight.css">
   <link rel="stylesheet" href="assets/style/css/main.css">
+
+  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+  <script type="text/javascript" src="assets/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+
+  <link rel="stylesheet" href="assets/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+  <script type="text/javascript" src="assets/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+
+  <link rel="stylesheet" href="assets/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+  <script type="text/javascript" src="assets/fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+  <script type="text/javascript" src="assets/fancybox/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+
+  <link rel="stylesheet" href="assets/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+  <script type="text/javascript" src="assets/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 </head>
 
 <body id="secondary">
@@ -60,43 +72,43 @@
 
     <h3>Photos</h3>
     <div class="flex-boxes">
-      <a href="#" class="flex-box" data-featherlight="assets/images/posting-pro/planning.jpg">
+      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/planning.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/planning.jpg" alt="White board with text written on it describing components of tool and identifying biases to consider."></div>
         <small>White board planning</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/posting-pro/journey-map.jpg">
+      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/journey-map.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/journey-map.jpg" alt="Journey map written on post-it notes to describe the journey through the tool."></div>
         <small>Post-it note journey map</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/posting-pro/sketching.jpg">
+      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/sketching.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/sketching.jpg" alt="White board sketching of user interface."></div>
         <small>Sketching UI on a whiteboard</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/posting-pro/sketching-2.jpg">
+      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/sketching-2.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/sketching-2.jpg" alt="White board sketching of user interface."></div>
         <small>Sketching UI on a whiteboard</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/posting-pro/wireframe.png">
+      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/wireframe.png">
         <div class="flex-image"><img src="assets/images/posting-pro/wireframe.png" alt="Wireframe design created in Balsalmiq to represent user interface."></div>
         <small>Wireframe created in balsamiq of user interface.</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/posting-pro/posting-pro-sketches.gif">
+      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/posting-pro-sketches.gif">
         <div class="flex-image"><img src="assets/images/posting-pro/posting-pro-sketches.gif" alt="A gif that moves through the screens on one version of Posting Pro."></div>
         <small>User interface</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/posting-pro/cost-map.jpg">
+      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/cost-map.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/cost-map.jpg" alt="Post-it notes places on a graph. X-axis is labeled 'Time and Effort' and Y-axis is labeled 'Impact'"></div>
         <small>Potential feature cost map measuring time and effort against impact.</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/posting-pro/cut-paste.jpg">
+      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/cut-paste.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/cut-paste.jpg" alt="Web-based interface is printed out cut into slices, person is re-organizing them."></div>
         <small>Exercise improving usability with existing UI elements.</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/posting-pro/word-association.jpg">
+      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/word-association.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/word-association.jpg" alt="List of word associations to help describe career pathways."></div>
         <small>Word association list for career pathways</small>
       </a>
-      <a href="#" class="flex-box" data-featherlight="assets/images/posting-pro/postingPro.gif">
+      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/postingPro.gif">
         <div class="flex-image"><img src="assets/images/posting-pro/postingPro.gif" alt="A gif that moves through the screens on one version of Posting Pro."></div>
         <small>User interface</small>
       </a>
@@ -201,7 +213,7 @@
       </ul>
     </div>
   </footer>
-  <script>
+  <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -210,6 +222,9 @@
     ga('create', 'UA-85010120-1', 'auto');
     ga('send', 'pageview');
 
+  	$(document).ready(function() {
+  		$(".fancybox").fancybox();
+  	});
   </script>
 </body>
 </html>
