--- a/posting-pro.html
+++ b/posting-pro.html
@@ -214,9 +214,13 @@
     ga('create', 'UA-85010120-1', 'auto');
     ga('send', 'pageview');
 
-  	$(document).ready(function() {
-  		$(".fancybox").fancybox();
-  	});
+    $(".fancybox").fancybox({
+      beforeShow : function() {
+        var alt = this.element.find('img').attr('alt');
+        this.inner.find('img').attr('alt', alt);
+        this.title = alt;
+      }
+    });
   </script>
 </body>
 </html>
