Adjusted flex boxes
three per row

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,8 @@
         <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches.jpg" alt="Planning in sketchbook to identify and narrow down work to include"></div>
         <small>Sketching</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="fancybox flex-box" rel="group" href="assets/images/portfolio/portfolio-sketches1.jpg">
         <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches1.jpg" alt="Sketching featured projects"></div>
         <small>Sketches for featured projects</small>
