--- a/posting-pro.html
+++ b/posting-pro.html
@@ -82,6 +82,8 @@
         <div class="flex-image"><img src="assets/images/posting-pro/sketching.jpg" alt="White board sketching of user interface."></div>
         <small>Sketching UI on a whiteboard</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/sketching-2.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/sketching-2.jpg" alt="White board sketching of user interface."></div>
         <small>Sketching UI on a whiteboard</small>
@@ -94,6 +96,8 @@
         <div class="flex-image"><img src="assets/images/posting-pro/posting-pro-sketches.gif" alt="A gif that moves through the screens on one version of Posting Pro."></div>
         <small>User interface</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/cost-map.jpg">
         <div class="flex-image"><img src="assets/images/posting-pro/cost-map.jpg" alt="Post-it notes places on a graph. X-axis is labeled 'Time and Effort' and Y-axis is labeled 'Impact'"></div>
         <small>Potential feature cost map measuring time and effort against impact.</small>
@@ -106,6 +110,8 @@
         <div class="flex-image"><img src="assets/images/posting-pro/word-association.jpg" alt="List of word associations to help describe career pathways."></div>
         <small>Word association list for career pathways</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/postingPro.gif">
         <div class="flex-image"><img src="assets/images/posting-pro/postingPro.gif" alt="A gif that moves through the screens on one version of Posting Pro."></div>
         <small>User interface</small>
