--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -80,6 +80,8 @@
         <div class="flex-image"><img src="assets/images/work-forward-nola/design-session.jpg" alt="Several people sitting around a table for a design session"></div>
         <small>Photo from design session</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map3.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map3.jpg" alt="Journey map written on a whiteboard describing how long it would take for a job seeker to become employed"></div>
         <small>Job seeker journey map</small>
@@ -92,6 +94,8 @@
         <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map.jpg" alt="Journey map written on post-it notes"></div>
         <small>Job seeker journey map</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/when-they.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/when-they.jpg" alt="Whiteboard planning that uses statements, when [blank], they [blank] to describe user behavior"></div>
         <small>When...They...exercise</small>
@@ -104,6 +108,8 @@
         <div class="flex-image"><img src="assets/images/work-forward-nola/one-pager-sketches.jpg" alt="Drafts of the one-pager printed and hung on a white board"></div>
         <small>Different one-pager versions</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/one-pager.gif">
         <div class="flex-image"><img src="assets/images/work-forward-nola/one-pager.gif" alt="Gif of the different draft versions of the one-pager"></div>
         <small>Different one-pager versions</small>
@@ -116,6 +122,8 @@
         <div class="flex-image"><img src="assets/images/work-forward-nola/re-designed-one-pager.jpg" alt="Bulletin board with re-designed one-pager"></div>
         <small>Re-designed one pager</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/JobSeekerJourneyMap.png">
         <div class="flex-image"><img src="assets/images/work-forward-nola/JobSeekerJourneyMap.png" alt="Map showing the journey of different people within the workforce system"></div>
         <small>Workforce journey map</small>
@@ -128,6 +136,8 @@
         <div class="flex-image"><img src="assets/images/work-forward-nola/appt.gif" alt="A wireframe of a user interface where a job seeker could schedule an appointment for a visit"></div>
         <small>Scheduling an appointment wireframe created in balsalmiq</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/Georgia-career-exploration.png">
         <div class="flex-image"><img src="assets/images/work-forward-nola/Georgia-career-exploration.png" alt="Wireframe of a career exploration interface"></div>
         <small>Career exploration wireframe created in balsalmiq</small>
@@ -140,6 +150,8 @@
         <div class="flex-image"><img src="assets/images/work-forward-nola/steph-career-exploration.png" alt="Wireframe of job exploration"></div>
         <small>Career exploration wireframe created in balsalmiq</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/career-exploration.gif">
         <div class="flex-image"><img src="assets/images/work-forward-nola/career-exploration.gif" alt="Version of interface where a job seeker could take a career assessment"></div>
         <small>Career assessment wireframe</small>
@@ -152,6 +164,8 @@
         <div class="flex-image"><img src="assets/images/work-forward-nola/wfnv.2.gif" alt="Gif of the second version"></div>
         <small>Version 2 mock-up</small>
       </a>
+    </div>
+    <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/usability-test.jpg">
         <div class="flex-image"><img src="assets/images/work-forward-nola/usability-test.jpg" alt="Stephanie conducting a usability test on a phone"></div>
         <small>Usability test</small>
