--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </svg>
         </a></li>
         <li>&nbsp;</li>
-        <li class="activeHex"><a href="https://twitter.com/sc_create" target="_blank" title="Stephanie Cain's Twitter">
+        <li class="activeHex"><a href="https://www.instagram.com/sc.create" target="_blank" title="Stephanie Cain's Instagram">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25px" height="25px" viewBox="0 0 438.536 438.536" style="enable-background:new 0 0 438.536 438.536;">
             <def><style>.instagram-action {fill: #CC3B6A;}</style></def>
             <title>Instagram Logo</title>
