--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -69,113 +69,113 @@
     <h3>Photos</h3>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/workforce-triangle.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/workforce-triangle.jpg" alt="Whiteboard drawing of workforce triangle"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/workforce-triangle.jpg" alt="Whiteboard drawing of workforce triangle"></div>
         <small>Workforce triangle</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/workforce.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/workforce.jpg" alt="Simplified workforce triangle showing the relationship between Federal, State and local"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/workforce.jpg" alt="Simplified workforce triangle showing the relationship between Federal, State and local"></div>
         <small>Simplified workforce triangle</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/design-session.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/design-session.jpg" alt="Several people sitting around a table for a design session"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/design-session.jpg" alt="Several people sitting around a table for a design session"></div>
         <small>Photo from design session</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map3.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map3.jpg" alt="Journey map written on a whiteboard describing how long it would take for a job seeker to become employed"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map3.jpg" alt="Journey map written on a whiteboard describing how long it would take for a job seeker to become employed"></div>
         <small>Job seeker journey map</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map-2.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map-2.jpg" alt="White boarding drawing of a journey map"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map-2.jpg" alt="White boarding drawing of a journey map"></div>
         <small>Job seeker journey map</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map.jpg" alt="Journey map written on post-it notes"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map.jpg" alt="Journey map written on post-it notes"></div>
         <small>Job seeker journey map</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/when-they.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/when-they.jpg" alt="Whiteboard planning that uses statements, when [blank], they [blank] to describe user behavior"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/when-they.jpg" alt="Whiteboard planning that uses statements, when [blank], they [blank] to describe user behavior"></div>
         <small>When...They...exercise</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/original-one-pager.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/original-one-pager.jpg" alt="Bulletin board with original one-pager"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/original-one-pager.jpg" alt="Bulletin board with original one-pager"></div>
         <small>Original one-pager on bulletin board</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/one-pager-sketches.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/one-pager-sketches.jpg" alt="Drafts of the one-pager printed and hung on a white board"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/one-pager-sketches.jpg" alt="Drafts of the one-pager printed and hung on a white board"></div>
         <small>Different one-pager versions</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/one-pager.gif">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/one-pager.gif" alt="Gif of the different draft versions of the one-pager"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/one-pager.gif" alt="Gif of the different draft versions of the one-pager"></div>
         <small>Different one-pager versions</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/One-Pager.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/One-Pager.jpg" alt="Final version of the one-pager"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/One-Pager.jpg" alt="Final version of the one-pager"></div>
         <small>Final re-designed one pager</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/re-designed-one-pager.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/re-designed-one-pager.jpg" alt="Bulletin board with re-designed one-pager"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/re-designed-one-pager.jpg" alt="Bulletin board with re-designed one-pager"></div>
         <small>Re-designed one pager</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/JobSeekerJourneyMap.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/JobSeekerJourneyMap.png" alt="Map showing the journey of different people within the workforce system"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/JobSeekerJourneyMap.png" alt="Map showing the journey of different people within the workforce system"></div>
         <small>Workforce journey map</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/WorkforceSystemUserJourney.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/WorkforceSystemUserJourney.png" alt="Map showing the journey of different people within the workforce system in New Orleans"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/WorkforceSystemUserJourney.png" alt="Map showing the journey of different people within the workforce system in New Orleans"></div>
         <small>Workforce journey map - New Orleans</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/appt.gif" alt="A wireframe of a user interface where a job seeker could schedule an appointment for a visit"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/appt.gif" alt="A wireframe of a user interface where a job seeker could schedule an appointment for a visit"></div>
         <small>Scheduling an appointment wireframe created in balsalmiq</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/Georgia-career-exploration.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/Georgia-career-exploration.png" alt="Wireframe of a career exploration interface"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/Georgia-career-exploration.png" alt="Wireframe of a career exploration interface"></div>
         <small>Career exploration wireframe created in balsalmiq</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/Pascal-career-exploration.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/Pascal-career-exploration.png" alt="Wireframe of career assessment interface"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/Pascal-career-exploration.png" alt="Wireframe of career assessment interface"></div>
         <small>Career assessment wireframe created in balsalmiq</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/steph-career-exploration.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/steph-career-exploration.png" alt="Wireframe of job exploration"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/steph-career-exploration.png" alt="Wireframe of job exploration"></div>
         <small>Career exploration wireframe created in balsalmiq</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/career-exploration.gif">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/career-exploration.gif" alt="Version of interface where a job seeker could take a career assessment"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/career-exploration.gif" alt="Version of interface where a job seeker could take a career assessment"></div>
         <small>Career assessment wireframe</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/portfolio-sketches2.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/portfolio-sketches2.jpg" alt="Sketching of the home page"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/portfolio-sketches2.jpg" alt="Sketching of the home page"></div>
         <small>Sketching interface</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/wfnv.2.gif">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/wfnv.2.gif" alt="Gif of the second version"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/wfnv.2.gif" alt="Gif of the second version"></div>
         <small>Version 2 mock-up</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/usability-test.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/usability-test.jpg" alt="Stephanie conducting a usability test on a phone"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/usability-test.jpg" alt="Stephanie conducting a usability test on a phone"></div>
         <small>Usability test</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/portfolio-sketches.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/portfolio-sketches.jpg" alt="Sketching versions of career pathways"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/portfolio-sketches.jpg" alt="Sketching versions of career pathways"></div>
         <small>Sketching career pathways</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/wfn.gif">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/wfn.gif" alt="Gif of final version"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/wfn.gif" alt="Gif of final version"></div>
         <small>Final version</small>
       </a>
     </div>
@@ -282,9 +282,13 @@
     ga('create', 'UA-85010120-1', 'auto');
     ga('send', 'pageview');
 
-  	$(document).ready(function() {
-  		$(".fancybox").fancybox();
-  	});
+    $(".fancybox").fancybox({
+      beforeShow : function() {
+        var alt = this.element.find('img').attr('alt');
+        this.inner.find('img').attr('alt', alt);
+        this.title = alt;
+      }
+    });
   </script>
 </body>
 </html>
