--- a/web-request-system.html
+++ b/web-request-system.html
@@ -37,7 +37,7 @@
   <img id="hex-image" src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/>
   <section id="project-container">
     <div class="button-wrapper">
-      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button center">Other Featured Projects</a>
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
     </div>
 
     <h2>Web Request System</h2>
@@ -70,96 +70,70 @@
     <p>Eventually, the tool was comprehensive enough to be used as the first version of a universal web request submission system. I taught the remaining web developers how to maintain the new system before I left to join Code for America as a 2016 fellow.</p>
   </section>
   <footer class="footer" role="contentinfo">
-    <div class="footer-secondary-links">
-      <ul>
-        <li><a href="https://github.com/skcain/skcain.github.io" target="_blank">View source on Github</a></li>
-      </ul>
+      <a href="https://github.com/skcain/skcain.github.io" target="_blank">View source on Github</a>
+    <div class="social-media">
+      <svg id="social-header" xmlns="http://www.w3.org/2000/svg" width="190.4" height="60.58" viewBox="0 0 138.4 30.58">
+        <defs>
+          <style>
+            .filled{
+              fill:#cc3b6a;
+              cursor: pointer;
+              -webkit-transition: fill .5s; /* Safari */
+              transition: fill .5s;
+            }
+            .filled, .outline {
+                stroke:#cc3b6a;
+                stroke-miterlimit:10;
+                stroke-width:0.5px;
+            }
+            .outline{ fill:#fff; }
+            .whiteFill{
+              fill:#fff;
+              cursor: pointer;
+              -webkit-transition: fill .5s; /* Safari */
+              transition: fill .5s;
+            }
+            #linkedin:hover .filled, #github:hover .filled, #instagram:hover .filled{ fill: #fff; }
+            #linkedin:hover .whiteFill, #github:hover .whiteFill, #instagram:hover .whiteFill{ fill: #cc3b6a; }
+          </style>
+          <polygon id="smallPoly" points="0.25 7.79 13.24 0.29 26.23 7.79 26.23 22.79 13.24 30.29 0.25 22.79 0.25 7.79"></polygon>
+        </defs>
 
-      <ul class="footer-social">
-        <li><a href="https://www.linkedin.com/in/skcain">
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25px" height="25px" viewBox="0 0 438.536 438.536" style="enable-background:new 0 0 438.536 438.536;" xml:space="preserve">
-            <def><style>#linkedIn {fill: #fff;}</style></def>
-            <title>LinkedIn Logo</title>
-            <g>
-            	<path id="linkedIn" d="M414.41,24.123C398.333,8.042,378.963,0,356.315,0H82.228C59.58,0,40.21,8.042,24.126,24.123
-            		C8.045,40.207,0.003,59.576,0.003,82.225v274.084c0,22.647,8.042,42.018,24.123,58.102c16.084,16.084,35.454,24.126,58.102,24.126
-            		h274.084c22.648,0,42.018-8.042,58.095-24.126c16.084-16.084,24.126-35.454,24.126-58.102V82.225
-            		C438.532,59.576,430.49,40.204,414.41,24.123z M133.618,367.157H67.666V169.016h65.952V367.157z M127.626,132.332
-            		c-6.851,6.567-15.893,9.851-27.124,9.851h-0.288c-10.848,0-19.648-3.284-26.407-9.851c-6.76-6.567-10.138-14.703-10.138-24.41
-            		c0-9.897,3.476-18.083,10.421-24.556c6.95-6.471,15.942-9.708,26.98-9.708c11.039,0,19.89,3.237,26.553,9.708
-            		c6.661,6.473,10.088,14.659,10.277,24.556C137.899,117.625,134.477,125.761,127.626,132.332z M370.873,367.157h-65.952v-105.92
-            		c0-29.879-11.036-44.823-33.116-44.823c-8.374,0-15.42,2.331-21.128,6.995c-5.715,4.661-9.996,10.324-12.847,16.991
-            		c-1.335,3.422-1.999,8.75-1.999,15.981v110.775h-65.952c0.571-119.529,0.571-185.579,0-198.142h65.952v27.974
-            		c13.867-21.681,33.558-32.544,59.101-32.544c22.84,0,41.21,7.52,55.104,22.554c13.895,15.037,20.841,37.214,20.841,66.519v113.64
-            		H370.873z"/>
-            </g>
-          </svg>
-          </a></li>
-        <li><a href="https://github.com/skcain">
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25px" height="25px" viewBox="0 0 438.536 438.536" style="enable-background:new 0 0 438.536 438.536;">
-            <def><style>.github {fill: #fff;}</style></def>
-            <title>GitHub Logo</title>
-            <g>
-              <path class="github" d="M158.173,352.599c-3.049,0.568-4.381,1.999-3.999,4.281c0.38,2.283,2.093,3.046,5.138,2.283
-                c3.049-0.76,4.38-2.095,3.997-3.997C162.931,353.074,161.218,352.216,158.173,352.599z"/>
-              <path class="github" d="M141.898,354.885c-3.046,0-4.568,1.041-4.568,3.139c0,2.474,1.619,3.518,4.853,3.138c3.046,0,4.57-1.047,4.57-3.138
-                C146.753,355.553,145.134,354.502,141.898,354.885z"/>
-              <path class="github" d="M119.629,354.022c-0.76,2.095,0.478,3.519,3.711,4.284c2.855,1.137,4.664,0.568,5.424-1.714
-                c0.572-2.091-0.666-3.61-3.711-4.568C122.197,351.265,120.39,351.922,119.629,354.022z"/>
-              <path class="github" d="M414.41,24.123C398.326,8.042,378.964,0,356.309,0H82.225C59.577,0,40.208,8.042,24.123,24.123
-                C8.042,40.207,0,59.576,0,82.225v274.088c0,22.65,8.042,42.017,24.123,58.098c16.084,16.084,35.454,24.126,58.102,24.126h63.953
-                c4.184,0,7.327-0.144,9.42-0.424c2.092-0.288,4.184-1.526,6.279-3.717c2.096-2.187,3.14-5.376,3.14-9.562
-                c0-0.568-0.05-7.046-0.144-19.417c-0.097-12.375-0.144-22.176-0.144-29.41l-6.567,1.143c-4.187,0.76-9.469,1.095-15.846,0.999
-                c-6.374-0.096-12.99-0.76-19.841-1.998c-6.855-1.239-13.229-4.093-19.13-8.562c-5.898-4.477-10.085-10.328-12.56-17.559
-                l-2.856-6.571c-1.903-4.373-4.899-9.229-8.992-14.554c-4.093-5.332-8.232-8.949-12.419-10.852l-1.999-1.428
-                c-1.331-0.951-2.568-2.098-3.711-3.429c-1.141-1.335-1.997-2.669-2.568-3.997c-0.571-1.335-0.097-2.43,1.427-3.289
-                c1.524-0.855,4.281-1.279,8.28-1.279l5.708,0.855c3.808,0.76,8.516,3.042,14.134,6.851c5.614,3.806,10.229,8.754,13.846,14.843
-                c4.38,7.806,9.657,13.75,15.846,17.843c6.184,4.097,12.419,6.143,18.699,6.143s11.704-0.476,16.274-1.424
-                c4.565-0.954,8.848-2.385,12.847-4.288c1.713-12.751,6.377-22.559,13.988-29.41c-10.848-1.143-20.602-2.854-29.265-5.14
-                c-8.658-2.286-17.605-5.995-26.835-11.136c-9.234-5.14-16.894-11.512-22.985-19.13c-6.09-7.618-11.088-17.61-14.987-29.978
-                c-3.901-12.375-5.852-26.652-5.852-42.829c0-23.029,7.521-42.637,22.557-58.814c-7.044-17.32-6.379-36.732,1.997-58.242
-                c5.52-1.714,13.706-0.428,24.554,3.855c10.85,4.286,18.794,7.951,23.84,10.992c5.046,3.042,9.089,5.614,12.135,7.71
-                c17.705-4.949,35.976-7.423,54.818-7.423c18.841,0,37.115,2.474,54.821,7.423l10.849-6.852c7.426-4.57,16.18-8.757,26.269-12.562
-                c10.088-3.806,17.795-4.854,23.127-3.14c8.562,21.51,9.328,40.922,2.279,58.241c15.036,16.179,22.559,35.786,22.559,58.815
-                c0,16.18-1.951,30.505-5.852,42.969c-3.898,12.467-8.939,22.463-15.13,29.981c-6.184,7.519-13.894,13.843-23.124,18.986
-                c-9.232,5.137-18.178,8.853-26.84,11.132c-8.661,2.286-18.414,4.004-29.263,5.147c9.891,8.562,14.839,22.072,14.839,40.538v68.238
-                c0,3.237,0.472,5.852,1.424,7.851c0.958,1.998,2.478,3.374,4.571,4.141c2.102,0.76,3.949,1.235,5.571,1.424
-                c1.622,0.191,3.949,0.287,6.995,0.287h63.953c22.648,0,42.018-8.042,58.095-24.126c16.084-16.084,24.126-35.454,24.126-58.102
-                V82.225C438.533,59.576,430.491,40.204,414.41,24.123z"/>
-              <path d="M86.793,319.195c-1.331,0.948-1.141,2.471,0.572,4.565c1.906,1.902,3.427,2.189,4.57,0.855
-                c1.331-0.948,1.141-2.471-0.575-4.569C89.458,318.336,87.936,318.049,86.793,319.195z"/>
-              <path d="M77.374,312.057c-0.57,1.335,0.096,2.478,1.999,3.426c1.521,0.955,2.762,0.767,3.711-0.568
-                c0.57-1.335-0.096-2.478-1.999-3.433C79.182,310.91,77.945,311.102,77.374,312.057z"/>
-              <path d="M95.646,330.331c-1.715,0.948-1.715,2.666,0,5.137c1.713,2.478,3.328,3.142,4.853,1.998c1.714-1.334,1.714-3.142,0-5.427
-                C98.978,329.571,97.359,328.993,95.646,330.331z"/>
-              <path d="M105.641,343.174c-1.714,1.526-1.336,3.327,1.142,5.428c2.281,2.279,4.185,2.566,5.708,0.849
-                c1.524-1.519,1.143-3.326-1.142-5.42C109.068,341.751,107.164,341.463,105.641,343.174z"/>
-            </g>
-          </svg>
-        </a></li>
-        <li><a href="https://www.instagram.com/sc.create/?hl=en">
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25px" height="25px" viewBox="0 0 438.536 438.536" style="enable-background:new 0 0 438.536 438.536;">
-            <def><style>.instagram {fill: #fff;}</style></def>
-            <title>Instagram Logo</title>
-            <g>
-            	<path class="instagram" d="M421.981,16.562C410.941,5.519,397.711,0,382.298,0H56.248C40.83,0,27.604,5.521,16.561,16.562
-            		C5.52,27.6,0.001,40.828,0.001,56.243V382.29c0,15.413,5.518,28.644,16.56,39.683c11.043,11.04,24.272,16.563,39.687,16.563
-            		h326.046c15.41,0,28.644-5.523,39.684-16.563c11.043-11.039,16.557-24.27,16.557-39.683V56.243
-            		C438.534,40.825,433.021,27.604,421.981,16.562z M157.462,158.025c17.224-16.652,37.924-24.982,62.097-24.982
-            		c24.36,0,45.153,8.33,62.381,24.982c17.228,16.655,25.837,36.785,25.837,60.386c0,23.598-8.609,43.729-25.837,60.379
-            		c-17.228,16.659-38.014,24.988-62.381,24.988c-24.172,0-44.87-8.336-62.097-24.988c-17.228-16.652-25.841-36.781-25.841-60.379
-            		C131.621,194.81,140.234,174.681,157.462,158.025z M388.865,370.589c0,4.945-1.718,9.083-5.141,12.416
-            		c-3.433,3.33-7.519,4.996-12.282,4.996h-305.2c-4.948,0-9.091-1.666-12.419-4.996c-3.333-3.326-4.998-7.471-4.998-12.416V185.575
-            		H89.08c-3.805,11.993-5.708,24.462-5.708,37.402c0,36.553,13.322,67.715,39.969,93.511c26.65,25.786,58.721,38.685,96.217,38.685
-            		c24.744,0,47.583-5.903,68.527-17.703c20.937-11.807,37.486-27.839,49.676-48.112c12.183-20.272,18.274-42.4,18.274-66.38
-            		c0-12.94-1.91-25.406-5.715-37.402h38.547v185.014H388.865z M388.865,115.626c0,5.52-1.903,10.184-5.716,13.99
-            		c-3.805,3.809-8.466,5.711-13.989,5.711h-49.676c-5.517,0-10.185-1.903-13.99-5.711c-3.806-3.806-5.708-8.47-5.708-13.99V68.522
-            		c0-5.33,1.902-9.945,5.708-13.848c3.806-3.901,8.474-5.854,13.99-5.854h49.676c5.523,0,10.185,1.952,13.989,5.854
-            		c3.812,3.903,5.716,8.518,5.716,13.848V115.626z"/>
-            </g>
-          </svg>
-        </a></li>
-      </ul>
+        <a href="https://www.linkedin.com/in/skcain" target="_blank" title="Stephanie Cain's LinkedIn">
+          <g id="linkedin">
+            <title>LinkedIn</title>
+            <use x="0" y="0" class="filled" xlink:href="#smallPoly" />
+            <path class="whiteFill" d="M21.11,8.88A2.89,2.89,0,0,0,19,8H9a3,3,0,0,0-3,3V21a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V11A2.89,2.89,0,0,0,21.11,8.88ZM10.87,21.4H8.46V14.17h2.41V21.4Zm-.22-8.57a1.37,1.37,0,0,1-1,.36h0a1.32,1.32,0,0,1-1-.36,1.19,1.19,0,0,1-.37-.89,1.17,1.17,0,0,1,.38-.9,1.39,1.39,0,0,1,1-.35,1.33,1.33,0,0,1,1,.35,1.23,1.23,0,0,1,.37.9A1.18,1.18,0,0,1,10.65,12.83Zm8.87,8.57H17.12V17.53q0-1.64-1.21-1.64a1.18,1.18,0,0,0-.77.26,1.6,1.6,0,0,0-.47.62,1.72,1.72,0,0,0-.07.58v4H12.19q0-6.54,0-7.23h2.41v1A2.42,2.42,0,0,1,16.75,14a2.61,2.61,0,0,1,2,.82,3.46,3.46,0,0,1,.76,2.43V21.4h0Z" transform="translate(-0.75 -0.71)"/>
+          </g>
+        </a>
+
+        <use x="28.23" y="0" class="outline" xlink:href="#smallPoly" />
+
+        <a href="https://github.com/skcain" target="_blank" title="Stephanie Cain's GitHub">
+          <g id="github">
+            <title>GitHub</title>
+            <use x="56.21" y="0" class="filled" xlink:href="#smallPoly" />
+            <path class="whiteFill" d="M67.72,20.86q-.17,0-.15.16t.19.08q.17,0,.15-.15T67.72,20.86Z" transform="translate(-0.75 -0.71)"/>
+            <path class="whiteFill" d="M67.13,20.95c-.11,0-.17,0-.17.11s.06.13.18.11.17,0,.17-.11S67.25,20.93,67.13,20.95Z" transform="translate(-0.75 -0.71)"/>
+            <path class="whiteFill" d="M66.32,20.92q0,.11.14.16t.2-.06-.14-.17C66.41,20.82,66.34,20.84,66.32,20.92Z" transform="translate(-0.75 -0.71)"/>
+            <path class="whiteFill" d="M77.07,8.88A2.89,2.89,0,0,0,75,8H65a3,3,0,0,0-3,3V21a3,3,0,0,0,3,3h2.33l.34,0a.4.4,0,0,0,.23-.14A.49.49,0,0,0,68,23.5s0-.26,0-.71,0-.81,0-1.07l-.24,0a3.07,3.07,0,0,1-.58,0,4.45,4.45,0,0,1-.72-.07,1.62,1.62,0,0,1-.7-.31,1.32,1.32,0,0,1-.46-.64l-.1-.24a2.6,2.6,0,0,0-.33-.53,1.26,1.26,0,0,0-.45-.4l-.07-.05a.77.77,0,0,1-.14-.13.58.58,0,0,1-.09-.15s0-.09.05-.12a.68.68,0,0,1,.3,0l.21,0a1.52,1.52,0,0,1,.52.25,1.68,1.68,0,0,1,.51.54,1.84,1.84,0,0,0,.58.65,1.23,1.23,0,0,0,.68.22,3,3,0,0,0,.59-.05A2.07,2.07,0,0,0,68,20.6a1.69,1.69,0,0,1,.51-1.07,7.13,7.13,0,0,1-1.07-.19,4.26,4.26,0,0,1-1-.41,2.8,2.8,0,0,1-.84-.7,3.36,3.36,0,0,1-.55-1.09,5.2,5.2,0,0,1-.21-1.56,3,3,0,0,1,.82-2.15,2.8,2.8,0,0,1,.07-2.12,1.46,1.46,0,0,1,.9.14,6.28,6.28,0,0,1,.87.4l.44.28a7.52,7.52,0,0,1,4,0l.4-.25a5.6,5.6,0,0,1,1-.46,1.36,1.36,0,0,1,.84-.11,2.77,2.77,0,0,1,.08,2.12,3,3,0,0,1,.82,2.15,5.25,5.25,0,0,1-.21,1.57,3.22,3.22,0,0,1-.55,1.09,2.91,2.91,0,0,1-.84.69,4.25,4.25,0,0,1-1,.41,7.13,7.13,0,0,1-1.07.19A1.86,1.86,0,0,1,71.94,21V23.5a.67.67,0,0,0,.05.29.29.29,0,0,0,.17.15l.2.05H75a3,3,0,0,0,3-3V11A2.89,2.89,0,0,0,77.07,8.88Z" transform="translate(-0.75 -0.71)"/>
+            <path class="whiteFill" d="M65.12,19.65s0,.09,0,.17.13.08.17,0,0-.09,0-.17S65.16,19.6,65.12,19.65Z" transform="translate(-0.75 -0.71)"/>
+            <path class="whiteFill" d="M64.77,19.39s0,.09.07.12a.09.09,0,0,0,.14,0s0-.09-.07-.13S64.8,19.35,64.77,19.39Z" transform="translate(-0.75 -0.71)"/>
+            <path class="whiteFill" d="M65.44,20.05q-.09.05,0,.19t.18.07,0-.2C65.56,20,65.5,20,65.44,20.05Z" transform="translate(-0.75 -0.71)"/>
+            <path class="whiteFill" d="M65.81,20.52c-.06.06,0,.12,0,.2s.15.09.21,0,0-.12,0-.2S65.86,20.46,65.81,20.52Z" transform="translate(-0.75 -0.71)"/>
+          </g>
+        </a>
+
+        <use x="84.19" y="0" class="outline" xlink:href="#smallPoly" />
+
+        <a href="https://www.instagram.com/sc.create/?hl=en" target="_blank" title="Stephanie Cain's Instagram">
+          <g id="instagram">
+            <title>Instagram</title>
+            <use x="112.17" y="0" class="filled" xlink:href="#smallPoly" />
+            <path class="whiteFill" d="M133.31,8.6a2,2,0,0,0-1.45-.6H120a2.06,2.06,0,0,0-2.05,2.05v11.9A2.06,2.06,0,0,0,120,24h11.9a2.06,2.06,0,0,0,2.05-2.05V10.05A2,2,0,0,0,133.31,8.6Zm-9.65,5.16a3.28,3.28,0,0,1,4.54,0,3,3,0,0,1,0,4.41,3.28,3.28,0,0,1-4.54,0,3,3,0,0,1,0-4.41Zm8.44,7.76a.61.61,0,0,1-.19.45.62.62,0,0,1-.45.18H120.33a.62.62,0,0,1-.64-.64V14.77h1.47a4.49,4.49,0,0,0-.21,1.36,4.57,4.57,0,0,0,1.46,3.41A4.87,4.87,0,0,0,125.92,21a5,5,0,0,0,2.5-.65,4.86,4.86,0,0,0,1.81-1.76,4.62,4.62,0,0,0,.67-2.42,4.49,4.49,0,0,0-.21-1.36h1.41v6.75h0Zm0-9.3a.71.71,0,0,1-.72.72h-1.81a.71.71,0,0,1-.72-.72V10.5a.7.7,0,0,1,.21-.51.69.69,0,0,1,.51-.21h1.81a.69.69,0,0,1,.51.21.7.7,0,0,1,.21.51Z" transform="translate(-0.75 -0.71)"/>
+          </g>
+        </a>
+      </svg>
     </div>
   </footer>
   <script>
