Removed in progress
Bar at top

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,6 @@
 
 <bod id="secondary" class="portfolio">
   <div class="centered-navigation" role="banner">
-    <div class="in-progress">This website is a work in progress. If you have comments, <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">please send me an email</a>.</div>
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
         <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
@@ -49,7 +48,7 @@
   <img id="hex-image" src="assets/images/portfolio-icon.png" alt="Blue abstract icon"/>
   <section id="project-container">
     <div class="button-wrapper">
-      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button center">Other Featured Projects</a>
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
     </div>
     <h2>Online Portfolio Process</h2>
     <p class="centered"><a href="http://scain.design" title="Personal Portfolio" target="_blank">scain.design</a></p>
