--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,6 @@
 
 <body id="secondary" class="resume">
   <div class="centered-navigation" role="banner">
-    <div class="in-progress">This website is a work in progress. If you have comments, <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">please send me an email</a>.</div>
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
         <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
@@ -38,7 +37,7 @@
     <p class="center">I have 10 years of professional experience and 4 years of industry experience.</p>
 
     <div class="button-wrapper">
-      <a href="resume.pdf" title="Download resume" target="_blank" class="basic-button basic-button center">Download resume</a>
+      <a href="resume.pdf" title="Download resume" target="_blank" class="basic-button basic-button-outline center">Download resume</a>
     </div>
 
     <div id="fellow">
