Added polygons on sub page
Added logos

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="assets/script/snap.svg-min.js"></script>
   <script src ="assets/script/main.js"></script>
 
   <link href='http://fonts.googleapis.com/css?family=Lusitana:400,700' rel='stylesheet' type='text/css'>
@@ -30,7 +31,7 @@
   <script type="text/javascript" src="assets/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 </head>
 
-<bod id="secondary" class="portfolio">
+<body id="secondary" class="portfolio">
   <div class="centered-navigation" role="banner">
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
@@ -44,8 +45,15 @@
       <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
     </div>
   </div>
-  <div class="hexBG"></div>
-  <img id="hex-image" src="assets/images/portfolio-icon.png" alt="Blue abstract icon"/>
+  <svg id="svg-bg" width="100%" height="230px" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" version="1.1">
+    <defs>
+      <polygon id="poly" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5"></polygon>
+    </defs>
+    <title>Logo and hexagon pattern</title>
+    <svg x="50%" overflow="visible" id="hex-group">
+      <polygon fill="#c9d3d6" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
+    </svg>
+  </svg>
   <section id="project-container">
     <div class="button-wrapper">
       <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
