--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
       <polygon points="0 63.5 110 0 220 63.5 220 190.5 110 254 0 190.5 0 63.5"></polygon>
     </clipPath>
     <defs>
-      <style>
-        .polygon { fill:#fff; }
-      </style>
       <polygon id="poly" points="0 63.5 110 0 220 63.5 220 190.5 110 254 0 190.5 0 63.5"></polygon>
     </defs>
     <title>Stephanie Cain's Profile Picture and hexagon pattern</title>
@@ -52,7 +49,7 @@
   <header>
     <h1>My name is Stephanie Cain. I am a product designer and I develop user-focused civic technology.</h1>
     <p>Through my experience in the public sector I've developed an expertise in government design, user engagement and workforce. I enjoy building relationships with people and creating growth opportunities for under-served communities.</p>
-    <p><a href="mailto:contact@scain.design" title="Email Stephanie Cain">Send me an email</a>.</p>
+    <p><strong><a href="mailto:contact@scain.design" title="Email Stephanie Cain">Send me an email</a></strong></p>
 
     <div class="social-media">
       <svg id="social-header" xmlns="http://www.w3.org/2000/svg" width="190.4" height="60.58" viewBox="0 0 138.4 30.58">
@@ -136,6 +133,11 @@
         <img class="square" src="assets/images/portfolio-icon.png" title="Personal Portfolio Icon" alt="Personal Portfolio Icon">
         <h3>Personal Portfolio</h3>
         <p>A mobile-first website that describes the process of my recent work.</p>
+      </a>
+      <a class="flex-box" href="web-request-system.html" title="Web Request System">
+        <img class="square" src="assets/images/osmre-logo.png" title="OSMRE Logo" alt="OSMRE Logo">
+        <h3>Web Request System</h3>
+        <p>Re-designed a request system used internally to track communication about web updates.</p>
       </a>
     </div>
   </section>
